--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=secret
-spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/cinema
 
 
 spring.jpa.hibernate.ddl-auto=none
