--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/cinema
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
+#===Path===#
+cinema.path.photos = C:\\Users\\CDI\\Documents\\images\\photos\\
+cinema.path.affiches = C:\\Users\\CDI\\Documents\\images\\affiches\\
 
 
