--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,16 @@
             <version>2.4.2</version>
         </dependency>-->
 
+
+
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>Semantic-UI</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
