--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,17 @@
             <version>1.9.22</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.webjars.npm</groupId>
-            <artifactId>semantic-ui</artifactId>
-            <version>2.4.2</version>
-        </dependency>-->
+            <artifactId>jquery</artifactId>
+            <version>3.3.1</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>less.js</artifactId>
+            <version>2.7.3</version>
+        </dependency>
 
 
 
