--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 cinema.path.photos = C:\\Users\\CDI\\Documents\\images\\photos\\
 cinema.path.affiches = C:\\Users\\CDI\\Documents\\images\\affiches\\
 
-
+spring.thymeleaf.mode=HTML
