--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,19 @@
         <version>2.1.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>fr.laerce</groupId>
+       <groupId>fr.laerce</groupId>
     <artifactId>cinema</artifactId>
-    <version>1.0-alpha01</version>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <name>cinema</name>
-    <description>Gestion d&#39;un cinema de quartier</description>
+<description>cinema spring boot</description>
 
-    <properties>
+       <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-    </properties>
-
+</properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -84,6 +87,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+         <dependency>
+         <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+</dependency>
     </dependencies>
 
     <build>
