work in progress !!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 #===Path===#
 cinema.path.photos = C:\\Users\\CDI\\Documents\\images\\photos\\
 cinema.path.affiches = C:\\Users\\CDI\\Documents\\images\\affiches\\
-
+cinema.path.illustration =C:\\Users\\CDI\\IdeaProjects\\cinemajpa\\src\\main\\resources\\static\\images/illustration\\
 spring.thymeleaf.mode=HTML
