--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=secret
-spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/cinema
+#spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/cinema
+spring.datasource.url=jdbc:postgresql://192.168.1.96:5432/cinema
 
 
 spring.jpa.hibernate.ddl-auto=none
@@ -13,5 +14,5 @@ cinema.path.affiches = C:\\Users\\CDI\\Documents\\images\\affiches\\
 cinema.path.illustration =C:\\Users\\CDI\\IdeaProjects\\cinemajpa\\src\\main\\resources\\static\\images/illustration\\
 spring.thymeleaf.mode=HTML
 
-cinema.tmp.path =
+cinema.tmp.movie.path =/home/jeromegide/IdeaProjects/cinema_tmdb/
 tmdb.api.key = ddec886742429cd922ebad0010e96c2d
