continue import des films,ajout bean dans la classe mere, work in progress...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=secret
-#spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/cinema
-spring.datasource.url=jdbc:postgresql://192.168.1.96:5432/cinema
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/cinema
+#spring.datasource.url=jdbc:postgresql://192.168.1.96:5432/cinema
 
 
 spring.jpa.hibernate.ddl-auto=none
@@ -15,4 +15,4 @@ cinema.path.illustration =C:\\Users\\CDI\\IdeaProjects\\cinemajpa\\src\\main\\re
 spring.thymeleaf.mode=HTML
 
 cinema.tmp.movie.path =/home/jeromegide/IdeaProjects/cinema_tmdb/
-tmdb.api.key = ddec886742429cd922ebad0010e96c2d
+tmdb.api.key=ddec886742429cd922ebad0010e96c2d
